fixed small height gap

--- a/src/components/Discover/Group.css
+++ b/src/components/Discover/Group.css
@@ -2,7 +2,7 @@
     background-color: var(--light);
     border-radius: 10px;
     box-shadow: 4px 4px 22px rgba(0, 0, 0, 0.25);
-    height: 431.6px;
+    height: 432px;
     width: 290px;
     display: flex;
     flex-direction: column;
